--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Match Master</title>
-    <link rel="stylesheet" href="assets/css/theme.css">
-</head>
-<body>
 
-    <div class="relative flex items-center justify-center min-h-[100vh] w-full afterSigninBg">
-        
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Match Master</title>
+  <link rel="stylesheet" href="assets/css/theme.css" />
+</head>
+
+<body>
+  <div class="relative flex min-h-[100vh] w-full afterSigninBg">
+    <div class="bg-[#1E2646] w-[200px] flex flex-col items-center">
+      <a href="#" class="flex justify-between py-7">
+        <img src="assets/images/logo.svg" class="max-h-[70px] w-auto" alt="" />
+      </a>
+      <div class="grow flex flex-col w-full items-start">
+        <a href="#" class="sidebar-nav active">
+          <div class="h-5 w-5">
+            <img src="assets/images/icon-dashboard.svg" class="h-full w-full object-contain" alt="" />
+          </div>
+          <span>Dashboard</span>
+        </a>
+        <a href="#" class="sidebar-nav !border-t-0">
+          <div class="h-5 w-5">
+            <img src="assets/images/icon-players.svg" class="h-full w-full object-contain" alt="" />
+          </div>
+          <span>Players</span>
+        </a>
+        <a href="#" class="sidebar-nav !border-t-0">
+          <div class="h-5 w-5">
+            <img src="assets/images/icon-venues.svg" class="h-full w-full object-contain" alt="" />
+          </div>
+          <span>Venues</span>
+        </a>
+        <a href="#" class="sidebar-nav !border-t-0">
+          <div class="h-5 w-5">
+            <img src="assets/images/icon-credit.svg" class="h-full w-full object-contain" alt="" />
+          </div>
+          <span>Credits Purchased</span>
+        </a>
+        <a href="#" class="sidebar-nav !border-t-0">
+          <div class="h-5 w-5">
+            <img src="assets/images/icon-games.svg" class="h-full w-full object-contain" alt="" />
+          </div>
+          <span>Games</span>
+        </a>
+        <a href="#" class="sidebar-nav !border-t-0">
+          <div class="h-5 w-5">
+            <img src="assets/images/icon-teams.svg" class="h-full w-full object-contain" alt="" />
+          </div>
+          <span>Teams</span>
+        </a>
+        <a href="#" class="sidebar-nav !border-t-0">
+          <div class="h-5 w-5">
+            <img src="assets/images/icon-notifications.svg" class="h-full w-full object-contain" alt="" />
+          </div>
+          <span>Notifications</span>
+        </a>
+        <a href="#" class="sidebar-nav mt-auto">
+          <div class="h-5 w-5">
+            <img src="assets/images/icon-logout.svg" class="h-full w-full object-contain" alt="" />
+          </div>
+          <span>Logout</span>
+        </a>
+      </div>
     </div>
-    
+  </div>
 </body>
+
 </html>
