--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -28,20 +28,20 @@
           <span>Players</span>
         </a>
         <div class="group flex flex-col w-full border-b border-b-[#283054]">
-          <div class="sidebar-nav open !border-t-0 !border-b-0 group-hover:before:w-1">
+          <div class="sidebar-nav !border-t-0 !border-b-0 group-hover:before:w-1">
             <div class="h-5 w-5">
               <img src="assets/images/icon-venues.svg" class="h-full w-full object-contain" alt="" />
             </div>
             <span>Venues</span>
             <div class="ml-auto">
-              <img src="assets/images/caret-down.svg" class="max-h-[6px] w-auto" alt="">
+              <img src="assets/images/caret-down.svg" class="max-h-[6px] w-auto group-hover:rotate-180" alt="">
             </div>
           </div>
-          <div class="h-0 overflow-hidden">
-            <a href="#" class="text-white px-5 text-xs py-2 bg-[#11172d]/60">
+          <div class="flex flex-col w-full h-0 overflow-hidden group-hover:h-auto">
+            <a href="#" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60">
               <span class="inline-block ml-8">Venues 1</span>
             </a>
-            <a href="#" class="text-white px-5 text-xs py-2 mb-3">
+            <a href="#" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60 mb-3">
               <span class="inline-block ml-8">Venues 2</span>
             </a>
           </div>
@@ -98,6 +98,42 @@
             <img src="assets/images/user.png" class="rounded-[50px] h-10 w-10 object-cover" alt="">
             <img src="assets/images/caret-down.svg" class="h-[6px] w-auto" alt="">
           </div>
+        </div>
+      </div>
+      <div class="relative px-9 py-7">
+        <div class="flex items-center justify-between">
+          <h6 class="text-white text-base font-regular">Total Number of players signed up</h6>
+          <button class="btn-theme">Create a Venue</button>
+        </div>
+        <div class="overflow-x-auto x-scroll">
+          <table class="min-w-full mt-6">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Sign up date</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Age Bracket</th>
+                <th>Country</th>
+                <th>Town</th>
+                <th>Player<br />Availability</th>
+                <th>Amount<br/>In Account</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>John Smith</td>
+                <td>5-15-2023</td>
+                <td>johnsmith@gmail.com</td>
+                <td>1112223344</td>
+                <td>Age Bracket</td>
+                <td>Country</td>
+                <td>Town</td>
+                <td>08:00 PM</td>
+                <td>$2515</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
