--- a/src/players.html
+++ b/src/players.html
@@ -22,6 +22,7 @@
       <button id="sidebarCloser" class="h-10 min-w-[40px] rounded-full bg-white lg:hidden inline-flex items-center justify-center absolute top-3 right-0 invisible opacity-0 translate-x-full smooth">
         <img src="assets/images/backArrow.svg" class="relative right-[1px]" alt="">
       </button>
+      <!-- Sidebar Navs -->
       <div class="grow flex flex-col w-full items-start">
         <a href="dashboard.html" class="sidebar-nav">
           <div class="h-5 w-5">
@@ -29,7 +30,7 @@
           </div>
           <span>Dashboard</span>
         </a>
-        <a href="players.html" class="sidebar-nav !border-t-0">
+        <a href="players.html" class="sidebar-nav !border-t-0 active">
           <div class="h-5 w-5">
             <img src="assets/images/icon-players.svg" class="h-full w-full object-contain" alt="" />
           </div>
@@ -54,7 +55,7 @@
             </a>
           </div>
         </div>
-        <a href="creditPurchased.html" class="sidebar-nav !border-t-0 active">
+        <a href="creditPurchased.html" class="sidebar-nav !border-t-0">
           <div class="h-5 w-5">
             <img src="assets/images/icon-credit.svg" class="h-full w-full object-contain" alt="" />
           </div>
@@ -86,6 +87,7 @@
         </a>
       </div>
     </div>
+    <!-- Right Panel -->
     <div class="lg:w-[calc(100%-200px)] w-full">
       <!-- Right Panel Topbar -->
       <div class="flex items-center border-b border-b-[#283054] xl:py-4 py-3 xl:px-9 px-5">
@@ -124,133 +126,75 @@
           </div>
         </div>
       </div>
+      <!-- Right Panel Main Display -->
       <div class="relative xl:px-9 px-5 xl:py-7 py-4 lg:max-h-[calc(100vh-75px)] max-h-[calc(100vh-67px)] overflow-y-auto y-scroll">
         <div class="flex lg:flex-row flex-col gap-4 items-center justify-between">
-          <h6 class="text-white text-base font-regular">Credits Purchased1</h6>
+          <h6 class="text-white text-base font-regular">Total Number of players signed up</h6>
           <button class="btn-theme">Create a Venue</button>
         </div>
-        <div class="lg:flex lg:justify-start grid grid-cols-12 gap-1 lg:mt-6 mt-5">
-          <span data-pill="purchases" class="pill pill-active">Purchases</span>
-          <span data-pill="cashOut" class="pill">Cash Out</span>
-          <span data-pill="gameFreeTransfer" class="pill">Game Free Transfer</span>
-        </div>
-        <div class="mt-7">
-          <div id="purchases" class="pill-tab block">
-            <div class="overflow-x-auto x-scroll">
-              <table class="min-w-full">
-                <thead>
-                  <tr>
-                    <th>Name of Player</th>
-                    <th>Date of Purchase</th>
-                    <th>Time of purchase</th>
-                    <th>Purchase Amount</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>John Smith</td>
-                    <td>5-15-2023</td>
-                    <td>08:00 PM</td>
-                    <td>$2515</td>
-                  </tr>
-                  <tr>
-                    <td>John Smith</td>
-                    <td>5-15-2023</td>
-                    <td>08:00 PM</td>
-                    <td>$2515</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-          <div id="cashOut" class="pill-tab hidden">
-            <div class="overflow-x-auto x-scroll">
-              <table class="min-w-full">
-                <thead>
-                  <tr>
-                    <th>Name of Player</th>
-                    <th>Date of cash out</th>
-                    <th>Time of Cash out</th>
-                    <th>Cash Out Amount</th>
-                    <th>Completed</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>John Smith</td>
-                    <td>5-15-2023</td>
-                    <td>08:00 PM</td>
-                    <td>$2515</td>
-                    <td>
-                      <div class="inline-flex items-center gap-2">
-                        <img src="assets/images/yesCircle.svg" class="h-[22px] w-auto" alt=""> Yes
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>John Smith</td>
-                    <td>5-15-2023</td>
-                    <td>08:00 PM</td>
-                    <td>$2515</td>
-                    <td>
-                      <div class="inline-flex items-center gap-2">
-                        <img src="assets/images/noCircle.svg" class="h-[22px] w-auto" alt=""> No
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>John Smith</td>
-                    <td>5-15-2023</td>
-                    <td>08:00 PM</td>
-                    <td>$2515</td>
-                    <td>
-                      <div class="inline-flex items-center gap-2">
-                        <img src="assets/images/yesCircle.svg" class="h-[22px] w-auto" alt=""> Yes
-                      </div>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-          <div id="gameFreeTransfer" class="pill-tab hidden">
-            <div class="overflow-x-auto x-scroll">
-              <table class="min-w-full">
-                <thead>
-                  <tr>
-                    <th>Name of Sender</th>
-                    <th>Name of Recipient</th>
-                    <th>Date of Transfer</th>
-                    <th>Time of Transfer</th>
-                    <th>Transfer Amount</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>John Smith</td>
-                    <td>John Smith</td>
-                    <td>5-15-2023</td>
-                    <td>08:00 PM</td>
-                    <td>$2515</td>
-                  </tr>
-                  <tr>
-                    <td>John Smith</td>
-                    <td>John Smith</td>
-                    <td>5-15-2023</td>
-                    <td>08:00 PM</td>
-                    <td>$2515</td>
-                  </tr>
-                  <tr>
-                    <td>John Smith</td>
-                    <td>John Smith</td>
-                    <td>5-15-2023</td>
-                    <td>08:00 PM</td>
-                    <td>$2515</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
+        <div class="overflow-x-auto x-scroll">
+          <table class="min-w-full mt-6">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Country</th>
+                <th>Town</th>
+                <th>Open<br />Time</th>
+                <th>Closing<br />Time</th>
+                <th>Amount<br />In Account</th>
+                <th class="w-[120px] min-w-[120px]">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>John Smith</td>
+                <td>johnsmith@gmail.com</td>
+                <td>1112223344</td>
+                <td>Country</td>
+                <td>abc town</td>
+                <td>08:00 PM</td>
+                <td>08:00 PM</td>
+                <td>$2515</td>
+                <td>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/comment.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/edit.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/delete.svg" class="h-[18px] w-auto" alt=""></button>
+                </td>
+              </tr>
+              <tr>
+                <td>John Smith</td>
+                <td>johnsmith@gmail.com</td>
+                <td>1112223344</td>
+                <td>Country</td>
+                <td>abc town</td>
+                <td>08:00 PM</td>
+                <td>08:00 PM</td>
+                <td>$2515</td>
+                <td>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/comment.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/edit.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/delete.svg" class="h-[18px] w-auto" alt=""></button>
+                </td>
+              </tr>
+              <tr>
+                <td>John Smith</td>
+                <td>johnsmith@gmail.com</td>
+                <td>1112223344</td>
+                <td>Country</td>
+                <td>abc town</td>
+                <td>08:00 PM</td>
+                <td>08:00 PM</td>
+                <td>$2515</td>
+                <td>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/comment.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/edit.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/delete.svg" class="h-[18px] w-auto" alt=""></button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
