--- a/src/venues.html
+++ b/src/venues.html
@@ -22,6 +22,7 @@
       <button id="sidebarCloser" class="h-10 min-w-[40px] rounded-full bg-white lg:hidden inline-flex items-center justify-center absolute top-3 right-0 invisible opacity-0 translate-x-full smooth">
         <img src="assets/images/backArrow.svg" class="relative right-[1px]" alt="">
       </button>
+      <!-- Sidebar Navs -->
       <div class="grow flex flex-col w-full items-start">
         <a href="dashboard.html" class="sidebar-nav">
           <div class="h-5 w-5">
@@ -36,7 +37,7 @@
           <span>Players</span>
         </a>
         <div class="group flex flex-col w-full border-b border-b-[#283054]">
-          <div class="sidebar-nav !border-t-0 !border-b-0 group-hover:before:w-1">
+          <div class="sidebar-nav !border-t-0 !border-b-0 group-hover:before:w-1 active">
             <a class="inline-flex items-center gap-3" href="venues.html">
               <div class="h-5 w-5">
                 <img src="assets/images/icon-venues.svg" class="h-full w-full object-contain" alt="" />
@@ -74,7 +75,7 @@
           </div>
           <span>Teams</span>
         </a>
-        <a href="notifications.html" class="sidebar-nav !border-t-0 active">
+        <a href="notifications.html" class="sidebar-nav !border-t-0">
           <div class="h-5 w-5">
             <img src="assets/images/icon-notifications.svg" class="h-full w-full object-contain" alt="" />
           </div>
@@ -88,6 +89,7 @@
         </a>
       </div>
     </div>
+    <!-- Right Panel -->
     <div class="lg:w-[calc(100%-200px)] w-full">
       <!-- Right Panel Topbar -->
       <div class="flex items-center border-b border-b-[#283054] xl:py-4 py-3 xl:px-9 px-5">
@@ -126,35 +128,75 @@
           </div>
         </div>
       </div>
+      <!-- Right Panel Main Display -->
       <div class="relative xl:px-9 px-5 xl:py-7 py-4 lg:max-h-[calc(100vh-75px)] max-h-[calc(100vh-67px)] overflow-y-auto y-scroll">
-        <h6 class="text-white text-base font-regular">Create Notifications</h6>
-        <div class="mt-7">
-          <div class="overflow-x-auto x-scroll">
-            <table class="min-w-full table-fixed">
-              <thead>
-                <tr>
-                  <th>Group Name</th>
-                  <th>Group Captain</th>
-                  <th>County</th>
-                  <th>Amount of players in Group</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Group abc</td>
-                  <td>John Smith</td>
-                  <td>4547981</td>
-                  <td>5 v 5</td>
-                </tr>
-                <tr>
-                  <td>Group Phoenix</td>
-                  <td>Micheal Sivartz</td>
-                  <td>1327981</td>
-                  <td>10 v 10</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+        <div class="flex lg:flex-row flex-col gap-4 items-center justify-between">
+          <h6 class="text-white text-base font-regular">Total Number of players signed up</h6>
+          <a href="createVenue.html" class="btn-theme">Create a Venue</a>
+        </div>
+        <div class="overflow-x-auto x-scroll">
+          <table class="min-w-full mt-6">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Country</th>
+                <th>Town</th>
+                <th>Open<br />Time</th>
+                <th>Closing<br />Time</th>
+                <th>Amount<br />In Account</th>
+                <th class="w-[120px] min-w-[120px]">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>John Smith</td>
+                <td>johnsmith@gmail.com</td>
+                <td>1112223344</td>
+                <td>Country</td>
+                <td>abc town</td>
+                <td>08:00 PM</td>
+                <td>08:00 PM</td>
+                <td>$2515</td>
+                <td>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/comment.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/edit.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/delete.svg" class="h-[18px] w-auto" alt=""></button>
+                </td>
+              </tr>
+              <tr>
+                <td>John Smith</td>
+                <td>johnsmith@gmail.com</td>
+                <td>1112223344</td>
+                <td>Country</td>
+                <td>abc town</td>
+                <td>08:00 PM</td>
+                <td>08:00 PM</td>
+                <td>$2515</td>
+                <td>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/comment.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/edit.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/delete.svg" class="h-[18px] w-auto" alt=""></button>
+                </td>
+              </tr>
+              <tr>
+                <td>John Smith</td>
+                <td>johnsmith@gmail.com</td>
+                <td>1112223344</td>
+                <td>Country</td>
+                <td>abc town</td>
+                <td>08:00 PM</td>
+                <td>08:00 PM</td>
+                <td>$2515</td>
+                <td>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/comment.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/edit.svg" class="h-[18px] w-auto" alt=""></button>
+                  <button class="p-[5px] scale-100 hover:scale-125 ease-linear duration-100"><img src="assets/images/delete.svg" class="h-[18px] w-auto" alt=""></button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
