--- a/src/signin.html
+++ b/src/signin.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="relative flex items-center justify-center min-h-[100vh] w-full signinBg py-10">
-        <div class="max-w-[400px] w-full flex flex-col items-center">
+        <div class="max-w-[400px] w-full flex flex-col items-center px-4">
             <div class="block">
                 <img src="assets/images/logo.svg" class="max-h-24 md:max-h-28 lg:max-h-32 xl:max-h-40 2xl:max-h-48 w-auto" alt="" />
             </div>
@@ -28,26 +28,6 @@
             <button class="btn-theme w-full">Sign In</button>
             <div class="text-center mt-5 xl:mb-12 lg:mb-10 mb-5">
                 <a href="#" class="inline-block text-[#6D92CA] font-bold text-sm p-2 smooth hover:text-white">Forgot Password?</a>
-            </div>
-            <div class="block w-full">
-                <a href="#" class="flex items-center justify-center gap-3 w-full h-[50px] bg-white rounded-[60px] border border-white border-opacity-0 text-base text-[#101931] font-regular">
-                    <img src="assets/images/google-g.svg" alt=""> Continue with Google
-                </a>
-                <a href="#" class="flex items-center justify-center gap-3 w-full h-[50px] bg-white rounded-[60px] border border-white border-opacity-0 text-base text-[#101931] font-regular mt-3">
-                    <img src="assets/images/apple-b.svg" alt=""> Continue with Apple
-                </a>
-            </div>
-            <div class="block text-center xl:mt-12 lg:mt-10 mt-8">
-                <a href="#" class="inline-flex items-center gap-3 text-white text-base font-bold" href="#">Register <img src="assets/images/arrow-right-green.svg" alt=""></a>
-            </div>
-            <div class="lg:absolute relative mt-12 lg:mt-0 xl:right-[10vw] lg:right-[5vw] bottom-6 flex gap-3">
-                <a href="#">
-                    <img src="assets/images/playstore.svg" class="w-auto xl:h-16 h-12" alt="">
-                </a>
-                <a href="#">
-                    <img src="assets/images/app-apple.svg" class="w-auto xl:h-16 h-12" alt="">
-                </a>
-
             </div>
         </div>
     </div>
