--- a/src/venues.html
+++ b/src/venues.html
@@ -49,11 +49,8 @@
             </div>
           </div>
           <div class="flex flex-col w-full h-0 overflow-hidden">
-            <a href="venueDetail.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60">
-              <span class="inline-block ml-8">Venues 1</span>
-            </a>
-            <a href="venueDetail.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60 mb-3">
-              <span class="inline-block ml-8">Venues 2</span>
+            <a href="createVenue.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60">
+              <span class="inline-block ml-8">Create Venue</span>
             </a>
           </div>
         </div>
@@ -144,7 +141,7 @@
                 <th>Country</th>
                 <th>Town</th>
                 <th>Open<br />Time</th>
-                <th>Closing<br />Time</th>
+                <th>Close<br />Time</th>
                 <th>Amount<br />In Account</th>
                 <th class="w-[120px] min-w-[120px]">Actions</th>
               </tr>
