--- a/src/createVenue.html
+++ b/src/createVenue.html
@@ -48,12 +48,10 @@
             </div>
           </div>
           <div class="flex flex-col w-full h-0 overflow-hidden">
-            <a href="venueDetail.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60">
-              <span class="inline-block ml-8">Venues 1</span>
+            <a href="createVenue.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60">
+              <span class="inline-block ml-8">Create Venue</span>
             </a>
-            <a href="venueDetail.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60 mb-3">
-              <span class="inline-block ml-8">Venues 2</span>
-            </a>
+            
           </div>
         </div>
         <a href="creditPurchased.html" class="sidebar-nav !border-t-0">
@@ -174,7 +172,7 @@
               </div>
               <div class="md:col-span-6 col-span-12">
                 <div class="form-group">
-                  <label for="" class="form-label">Username</label>
+                  <label for="" class="form-label">Venue Name</label>
                   <input type="text" class="form-field">
                 </div>
               </div>
@@ -218,7 +216,7 @@
                   </div>
                   <div class="col-span-6">
                     <div class="form-group">
-                      <label for="" class="form-label">Closing Time</label>
+                      <label for="" class="form-label">Close TIme</label>
                       <input type="time" class="form-field">
                     </div>
                   </div>
