--- a/src/games.html
+++ b/src/games.html
@@ -48,12 +48,10 @@
             </div>
           </div>
           <div class="flex flex-col w-full h-0 overflow-hidden">
-            <a href="venueDetail.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60">
-              <span class="inline-block ml-8">Venues 1</span>
+            <a href="createVenue.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60">
+              <span class="inline-block ml-8">Create Venue</span>
             </a>
-            <a href="venueDetail.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60 mb-3">
-              <span class="inline-block ml-8">Venues 2</span>
-            </a>
+            
           </div>
         </div>
         <a href="creditPurchased.html" class="sidebar-nav !border-t-0">
@@ -129,7 +127,6 @@
       <div class="relative xl:px-9 px-5 xl:py-7 py-4 lg:max-h-[calc(100vh-75px)] max-h-[calc(100vh-67px)] overflow-y-auto y-scroll">
         <div class="flex lg:flex-row flex-col gap-4 items-center justify-between">
           <h6 class="text-white text-base font-regular">Total Games</h6>
-          <a href="createVenue.html" class="btn-theme">Create a Venue</a>
         </div>
         <div class="lg:flex lg:justify-start grid grid-cols-12 gap-1 mt-6">
           <span data-pill="friendly" class="pill">Freindly Match</span>
