--- a/src/teams.html
+++ b/src/teams.html
@@ -48,12 +48,10 @@
             </div>
           </div>
           <div class="flex flex-col w-full h-0 overflow-hidden">
-            <a href="venueDetail.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60">
-              <span class="inline-block ml-8">Venues 1</span>
+            <a href="createVenue.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60">
+              <span class="inline-block ml-8">Create Venue</span>
             </a>
-            <a href="venueDetail.html" class="flex text-white px-5 text-xs py-2 bg-transparent hover:bg-[#11172d]/60 mb-3">
-              <span class="inline-block ml-8">Venues 2</span>
-            </a>
+            
           </div>
         </div>
         <a href="creditPurchased.html" class="sidebar-nav !border-t-0">
