--- a/src/creditPurchased.html
+++ b/src/creditPurchased.html
@@ -126,7 +126,7 @@
       </div>
       <div class="relative xl:px-9 px-5 xl:py-7 py-4 lg:max-h-[calc(100vh-75px)] max-h-[calc(100vh-67px)] overflow-y-auto y-scroll">
         <div class="flex lg:flex-row flex-col gap-4 items-center justify-between">
-          <h6 class="text-white text-base font-regular">Credits Purchased1</h6>
+          <h6 class="text-white text-base font-regular">Credits Purchased</h6>
         </div>
         <div class="lg:flex lg:justify-start grid grid-cols-12 gap-1 lg:mt-6 mt-5">
           <span data-pill="purchases" class="pill pill-active">Purchases</span>
