--- a/src/games.html
+++ b/src/games.html
@@ -129,7 +129,7 @@
           <h6 class="text-white text-base font-regular">Total Games</h6>
         </div>
         <div class="lg:flex lg:justify-start grid grid-cols-12 gap-1 mt-6">
-          <span data-pill="friendly" class="pill">Freindly Match</span>
+          <span data-pill="friendly" class="pill">Friendly Match</span>
           <span data-pill="futsal" class="pill">Futsal</span>
           <span data-pill="ladiesFootball" class="pill pill-active">Ladies Football</span>
           <span data-pill="walkingFootball" class="pill">Walking Football</span>
