--- a/src/createVenue.html
+++ b/src/createVenue.html
@@ -216,7 +216,7 @@
                   </div>
                   <div class="col-span-6">
                     <div class="form-group">
-                      <label for="" class="form-label">Close TIme</label>
+                      <label for="" class="form-label">Close Time</label>
                       <input type="time" class="form-field">
                     </div>
                   </div>
