--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -125,6 +125,7 @@
           </div>
         </div>
       </div>
+      <!-- Display Box -->
       <div class="relative xl:px-9 px-5 xl:py-7 py-4 lg:max-h-[calc(100vh-75px)] max-h-[calc(100vh-67px)] overflow-y-auto y-scroll">
         <div class="flex lg:flex-row flex-col gap-4 items-center justify-between">
           <h6 class="text-white text-base font-regular">Total Number of players signed up</h6>
