--- a/src/index.html
+++ b/src/index.html
@@ -888,7 +888,7 @@
       </div>
     </div>
       <!-- !watch Now End -->
-      <!-- form -->
+      <!-- form Start-->
       <div class="container mx-auto text-white pb-40">
         <div class="w-full rounded-xl bg-cover bg-center bg-no-repeat gradientBg p-[60px] mb-[62px]">
           <div class="grid grid-cols-12">
@@ -959,7 +959,27 @@
         </div>
 
       </div>
+      <!-- form End -->
+      <!-- Educational Events Start -->
+      <div class="bg-cover bg-center bg-no-repeat gradientBg">
+        <div class="container mx-auto text-white pt-[131px] pb-[141px]  px-[130px] ">
+          <div class="text-center">
+            <h2 class="text-[40px] family-medium text-white mb-3">Upcoming Educatinal Events</h2>
+            <p class="text-xl family-normal text-white mb-14">Let's Learn together</p>
+          </div>
+          <div class="bg-white rounded-xl p-5 flex justify-between items-center gap">
+            <div class="flex items-center gap-[50px]">
+              <img class="w-[200px] h-auto" src="" alt="">
+              <div>
+                123
+              </div>
+            </div>
 
+          </div>
+        </div>
+      </div>
+    
+      <!-- Educational Events End -->
 
       
   </div>
